# openvpn-ldap-auth

./: AGENTS.md  README  UPGRADE-from-0.0.X.txt  autogen.sh  configure.in  la_ldap.patch
docs/superpowers/plans/: 2026-06-25-tc-rate-limiting.md  2026-07-05-tc-rate-limiting-v2.md
docs/superpowers/specs/: 2026-05-31-dynamic-iptables-reload-design.md  2026-06-25-tc-rate-limiting-design.md  2026-07-05-tc-rate-limiting-v2-design.md
src/: Makefile.am  action.c  action.h  client_context.c  client_context.h  cnf.c  cnf.h  debug.c  debug.h  defines.h  la_iptables.c  la_iptables.h  la_ldap.c  la_ldap.h  la_tc.c  la_tc.h  ldap-auth.c  ldap_profile.c  ldap_profile.h  openvpn-plugin.h  queue.c  queue.h  types.h  utils.c  utils.h
tests/: Makefile.am  config.conf  openvpn-ldap-auth-test.c  openvpn-ldap-search.c  test_parse_bandwidth  test_parse_bandwidth.c
