m4_define([openvpnldapauth_version_major],[0])
m4_define([openvpnldapauth_version_minor],[0])
m4_define([openvpnldapauth_version_micro],[6])
m4_define([openvpnldapauth_version_extra],[])
m4_define([openvpnldapauth_version],[openvpnldapauth_version_major().openvpnldapauth_version_minor().openvpnldapauth_version_micro()openvpnldapauth_version_extra()])

AC_INIT([OpenVPN LDAP Auth],[openvpnldapauth_version()],[chantra@debuntu.org],[openvpn-ldap-auth])
AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])

AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS([config.h])
AC_USE_SYSTEM_EXTENSIONS

AC_PROG_RANLIB
LT_INIT
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC

AC_CHECK_FUNCS([strdup])

CFLAGS="${CFLAGS} -g -Wall -Werror -D_GNU_SOURCE"
AC_SUBST(CFLAGS)

AC_ARG_ENABLE(ldapuserconfig,
   [  --disable-ldapuserconfig, Disable user ldap settings],
   [LDAP_USER_CONF="$enableval"],
   [LDAP_USER_CONF="yes"]
)

dnl enable ldapuserconfig
if test "$LDAP_USER_CONF" = "yes"; then
  AC_DEFINE(ENABLE_LDAPUSERCONF, 1, [Enable user ldap settings])
fi

AC_CHECK_HEADER([ldap.h],
        [AC_CHECK_LIB(ldap, [ldap_initialize])],
        [AC_MSG_ERROR("ldap headers not found")])

AC_CHECK_HEADER([lber.h],
        [AC_CHECK_LIB(lber, [ber_free])],
        [AC_MSG_ERROR("lber headers not found")])

AC_CHECK_HEADER([yaml.h],
        [AC_CHECK_LIB(yaml, [yaml_parser_initialize])],
        [AC_MSG_ERROR("yaml.h headers not found")])

AC_CHECK_HEADER([pthread.h],
      [AC_CHECK_LIB(pthread, [pthread_create])],
      [AC_MSG_ERROR("pthread headers not found")])

AC_CHECK_HEADERS([syslog.h sys/resource.h ])
AC_CHECK_FUNCS([getrlimit])

dnl libnl-3 for traffic control
PKG_CHECK_MODULES([LIBNL], [libnl-3.0 libnl-route-3.0], [
    have_libnl=yes
    AC_DEFINE(HAVE_LIBNL, 1, [Define if libnl-3 is available])
], [
    AC_MSG_WARN([libnl-3 not found, traffic control support disabled])
    have_libnl=no
])
AM_CONDITIONAL([HAVE_LIBNL], [test "$have_libnl" = yes])


AC_PROG_INSTALL
AC_OUTPUT( Makefile src/Makefile tests/Makefile )

echo "
Configuration:

   Source code location:                              ${srcdir}
   Lib install dir:                                   ${prefix}/lib
   Compiler:                                          ${CXX}

   Traffic control (libnl):                            ${have_libnl}

   LDAP user conf:                                    ${LDAP_USER_CONF}
"
